@@ -200,7 +200,8 @@ t/31_ocropus.t
 t/32_ocropus_in_thread.t
 t/33_cuneiform.t
 t/34_cuneiform_in_thread.t
-t/35_unpaper.t
+t/351_unpaper.t
+t/352_unpaper.t
 t/36_unpaper2.t
 t/373_user_defined.t
 t/374_user_defined.t
