@@ -16,6 +16,7 @@ SKIP: {
  my $unpaper = Gscan2pdf::Unpaper->new;
 
  use Log::Log4perl qw(:easy);
+
  Log::Log4perl->easy_init($WARN);
  my $logger = Log::Log4perl::get_logger;
  Gscan2pdf::Document->setup($logger);
