@@ -1,6 +1,7 @@
 1.2.5 (28.06.2014):
 
 * Fix today button on date dialog saving PDF
+* Fix resolution when processing non-standard sized images with unpaper
 
 
 1.2.4 (26.03.2014):
